--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 thiserror = "1.0.49"
-tiberius = { version = "0.12.2", default-features = false }
+tiberius = { git = "https://github.com/shubhamsinha/tiberius-optimized", rev = "01dd0ded6b1a49d527a87264512063764828198c", default-features = false }
 deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
 tokio = { version = "1.33.0", features = ["net"] }
 tokio-util = { version = "0.7.9", features = ["compat"] }
